[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "electri-city-ops"
version = "0.1.0"
description = "Defensiver SEO- und Performance-Ops-Stack fuer getrennte WordPress-Analyse"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
electri-city-ops = "electri_city_ops.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
